--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,6 @@ html {
   font-family: sans-serif;
 }
 
-
 #app {
   min-height: 100dvh;
   width: 100%;
@@ -24,11 +23,10 @@ html:has(.face-id-page) {
   overflow: hidden;
 }
 
-.page-wrapper+.page-wrapper {
+.page-wrapper + .page-wrapper {
   position: absolute !important;
   inset: 0 !important;
 }
-
 
 ::-webkit-scrollbar-track {
   background-color: color-mix(in srgb, var(--secondary-400), transparent 84%);
@@ -43,4 +41,12 @@ html:has(.face-id-page) {
 ::-webkit-scrollbar-thumb {
   border-radius: var(--radius-m);
   background-color: var(--secondary-500);
+}
+
+.gold-text {
+  background: var(--gold-gradient-text);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  filter: drop-shadow(0 1px 2px rgba(200, 170, 0, 0.3));
 }
